--- a/Youtube_JuliaLang_tutorial/0. Introduction, Documentation and Prerequisites.ipynb
+++ b/Youtube_JuliaLang_tutorial/0. Introduction, Documentation and Prerequisites.ipynb
@@ -9,6 +9,7 @@
     "**DynamicalSystems.jl** is a Julia software library for the exploration of chaos and nonlinear dynamics.\n",
     "\n",
     "## Contents of these tutorials\n",
+    "This tutorial covers version `1.0.0` and larger, for **DynamicalSystems.jl**.\n",
     "\n",
     "1. How to create a dynamical system and get a trajectory out of it.\n",
     "3. Orbit diagrams & Poincaré surfaces of section of a dynamical system.\n",
@@ -21,7 +22,6 @@
     "    * Finding fixed points of any map of any order\n",
     "    * Detecting chaos with GALI\n",
     "    \n",
-    "8. How to predict timeseries (*still in beta!*).\n",
     "\n",
     "## About DynamicalSystems.jl\n",
     "\n",
@@ -29,11 +29,6 @@
     "\n",
     "3. Aims to be a \"library\" in the literal sense: all offered functionality is well documented and accompanied with descriptions of the algorithms as well as references to original papers. This offers new users plenty of chances to learn new algorithms.\n",
     "\n",
-    "## Disclaimer\n",
-    "\n",
-    "**DynamicalSystems.jl** is in v1.0-alpha! Comments, testing, suggestions etc. are very welcome before official release.\n",
-    "\n",
-    "Any changes that will happen for v1.0 release will be summarized in the [News page](https://juliadynamics.github.io/DynamicalSystems.jl/latest/news/).\n",
     "\n",
     "---\n",
     "\n",
@@ -45,7 +40,7 @@
     "\n",
     "If you have questions, you can open issues in the appropriate [GitHub repository](https://github.com/JuliaDynamics); if you think your question is minor, don't hesitate to chat with us over [gitter](https://gitter.im/JuliaDynamics/Lobby).\n",
     "\n",
-    "**DynamicalSystems.jl** is a registered package. On Julia v0.6 you only have to type `Pkg.add(\"DynamicalSystems\")` to install its features.\n",
+    "**DynamicalSystems.jl** is a registered package. On Julia v1.0 you only have to type `] add DynamicalSystems` to install its features.\n",
     "\n",
     "## Documentation Strings\n",
     "\n",
@@ -79,15 +74,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.2",
+   "display_name": "Julia 0.7.0",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-0.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.2"
+   "version": "0.7.0"
   }
  },
  "nbformat": 4,
