everything ported to 1.0!

--- a/Youtube_JuliaLang_tutorial/4. Entropies & Dimensions.ipynb
+++ b/Youtube_JuliaLang_tutorial/4. Entropies & Dimensions.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,32 +68,32 @@
      "data": {
       "text/plain": [
        "3-dimensional Dataset{Float64} with 100000 points\n",
-       " 0.826542   0.0580532  0.68893  \n",
-       " 0.689788   0.378567   0.47514  \n",
-       " 0.651195   0.40748    0.601475 \n",
-       " 0.593161   0.136829   0.139088 \n",
-       " 0.280181   0.274085   0.381468 \n",
-       " 0.877752   0.530048   0.738083 \n",
-       " 0.556917   0.648519   0.0438047\n",
-       " 0.155088   0.772296   0.882468 \n",
-       " 0.0290468  0.155249   0.626128 \n",
-       " 0.327047   0.0956928  0.499885 \n",
-       " 0.584911   0.401198   0.0115122\n",
-       " 0.903845   0.822995   0.778622 \n",
-       " 0.795936   0.286123   0.52239  \n",
-       " ⋮                              \n",
-       " 0.230483   0.805787   0.694579 \n",
-       " 0.927116   0.536262   0.568228 \n",
-       " 0.81648    0.540311   0.516526 \n",
-       " 0.297111   0.898152   0.286607 \n",
-       " 0.675072   0.932831   0.656387 \n",
-       " 0.921052   0.704319   0.490183 \n",
-       " 0.21466    0.676118   0.0389595\n",
-       " 0.728165   0.283247   0.433265 \n",
-       " 0.426975   0.287467   0.789224 \n",
-       " 0.564575   0.124941   0.447837 \n",
-       " 0.488822   0.777101   0.560177 \n",
-       " 0.316334   0.591286   0.488597 \n"
+       " 0.699771   0.644189   0.309286\n",
+       " 0.016319   0.867217   0.119264\n",
+       " 0.063508   0.914252   0.89147 \n",
+       " 0.0447145  0.499533   0.979731\n",
+       " 0.583468   0.505453   0.199842\n",
+       " 0.98925    0.883142   0.719626\n",
+       " 0.509233   0.146274   0.991451\n",
+       " 0.456898   0.130371   0.251157\n",
+       " 0.722708   0.211802   0.147614\n",
+       " 0.202788   0.047835   0.961169\n",
+       " 0.322085   0.577853   0.692138\n",
+       " 0.285881   0.768915   0.240645\n",
+       " 0.568633   0.136538   0.646178\n",
+       " ⋮                             \n",
+       " 0.333472   0.133387   0.124869\n",
+       " 0.318019   0.561862   0.136258\n",
+       " 0.417815   0.436498   0.351205\n",
+       " 0.334449   0.849044   0.387811\n",
+       " 0.448711   0.554418   0.431341\n",
+       " 0.599152   0.657549   0.692737\n",
+       " 0.860932   0.0222998  0.975152\n",
+       " 0.479849   0.890761   0.363897\n",
+       " 0.513454   0.893129   0.137245\n",
+       " 0.654107   0.920771   0.377504\n",
+       " 0.948065   0.459143   0.918812\n",
+       " 0.625652   0.0926653  0.304383\n"
       ]
      },
      "execution_count": 2,
@@ -130,10 +130,10 @@
     {
      "data": {
       "text/html": [
-       "6.898070131801904"
+       "6.897836433773152"
       ],
       "text/plain": [
-       "6.898070131801904"
+       "6.897836433773152"
       ]
      },
      "execution_count": 3,
@@ -155,10 +155,10 @@
     {
      "data": {
       "text/html": [
-       "11.417378949458222"
+       "11.417124496530638"
       ],
       "text/plain": [
-       "11.417378949458222"
+       "11.417124496530638"
       ]
      },
      "execution_count": 4,
@@ -178,10 +178,10 @@
     {
      "data": {
       "text/html": [
-       "11.512745481167304"
+       "11.512845468169079"
       ],
       "text/plain": [
-       "11.512745481167304"
+       "11.512845468169079"
       ]
      },
      "execution_count": 5,
@@ -241,30 +241,30 @@
       "text/plain": [
        "1000000-element Array{Float64,1}:\n",
        " 0.0\n",
+       " 0.0\n",
+       " 1.0\n",
        " 1.0\n",
        " 1.0\n",
        " 1.0\n",
        " 0.0\n",
-       " 0.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 1.0\n",
        " 1.0\n",
        " 0.0\n",
-       " 1.0\n",
-       " 1.0\n",
-       " 0.0\n",
-       " 1.0\n",
        " 0.0\n",
        " ⋮  \n",
+       " 0.0\n",
        " 1.0\n",
-       " 1.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
        " 1.0\n",
        " 1.0\n",
        " 0.0\n",
        " 0.0\n",
-       " 1.0\n",
-       " 1.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 1.0\n",
        " 0.0"
       ]
      },
@@ -285,10 +285,10 @@
     {
      "data": {
       "text/html": [
-       "0.6931471451819449"
+       "0.6931471778219452"
       ],
       "text/plain": [
-       "0.6931471451819449"
+       "0.6931471778219452"
       ]
      },
      "execution_count": 8,
@@ -406,10 +406,10 @@
     {
      "data": {
       "text/html": [
-       "11.444718301991868"
+       "11.444736855375602"
       ],
       "text/plain": [
-       "11.444718301991868"
+       "11.444736855375602"
       ]
      },
      "execution_count": 12,
@@ -441,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  41.901 ms (38 allocations: 3.05 MiB)\n"
+      "  46.785 ms (38 allocations: 3.05 MiB)\n"
      ]
     }
    ],
@@ -556,7 +556,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  42.166 ms (37 allocations: 3.05 MiB)\n"
+      "  47.582 ms (37 allocations: 3.05 MiB)\n"
      ]
     }
    ],
@@ -582,7 +582,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  86.917 ms (44 allocations: 28.53 MiB)\n"
+      "  94.396 ms (44 allocations: 28.53 MiB)\n"
      ]
     }
    ],
@@ -643,12 +643,12 @@
     "\n",
     "Which ε should we use...?\n",
     "\n",
-    "Let's do a \"random\" logspace based guess..."
+    "Let's do a \"random\" guess..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        " 10.0                   "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,20 +680,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: Deprecated syntax `implicit assignment to global variable `ε``.\n",
-      "│ Use `global ε` instead.\n",
-      "└ @ nothing none:0\n",
-      "┌ Warning: Loop variable `ε` around In[49]:2 overwrites a variable in an enclosing scope. In the future the variable will be local to the loop instead.\n",
-      "└ @ nothing In[49]:2\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -712,7 +701,7 @@
        " -0.0               "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,16 +727,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: broadcast will default to iterating over its arguments in the future. Wrap arguments of\n",
-      "│ type `x::Dataset{3,Float64}` with `Ref(x)` to ensure they broadcast as \"scalar\" elements.\n",
-      "│   caller = ip:0x0\n",
-      "└ @ Core :-1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "12-element Array{Float64,1}:\n",
@@ -771,7 +750,14 @@
     }
    ],
    "source": [
-    "Es = genentropy.(1, ες, towel_tr)"
+    "Es = genentropy.(1, ες, Ref(towel_tr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*usage of `Ref` ensures broadcasting over `ες` but not over `towel_tr`, which is also iterable.*"
    ]
   },
   {
@@ -821,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +816,7 @@
        "([6.07045, 5.02382, 3.97719, 2.93056, 1.88393, 0.837304, -0.209326], [12.5477, 10.4825, 8.23824, 6.05165, 3.7852, 1.6531, -0.0])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +846,7 @@
        "2.0390265255271367"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +927,7 @@
     }
    ],
    "source": [
-    "Es = genentropy.(1, ες, towel_tr)\n",
+    "Es = genentropy.(1, ες, Ref(towel_tr))\n",
     "figure(figsize = (6,4))\n",
     "plot(-log.(ες), Es); xlabel(\"-log(ε)\"); ylabel(\"E\");"
    ]
@@ -1048,95 +1034,6 @@
    ],
    "source": [
     "slopes[end]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This `linear_regions` function seems very shady... Is there any \"easy\" way to visualize what it does? *Say no more!*\n",
-    "\n",
-    "In this next example, we'll use `ChaosTools`, which belows to `DynamicalSystems`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using PyPlot, ChaosTools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`ChaosTools` provides a function, `plot_linear_regions` !"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: plot_linear_regions not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: plot_linear_regions not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[31]:2"
-     ]
-    }
-   ],
-   "source": [
-    "figure(figsize=(6,4))\n",
-    "plot_linear_regions(x, Es)\n",
-    "xlabel(\"-log(ε)\"); ylabel(\"E\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Adjust the tolerance of `linear_regions` using keyword argument `tol`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: plot_linear_regions not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: plot_linear_regions not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[32]:2"
-     ]
-    }
-   ],
-   "source": [
-    "figure(figsize=(6,4))\n",
-    "plot_linear_regions(x, Es; tol = 0.8)\n",
-    "xlabel(\"-log(ε)\"); ylabel(\"E\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice how the color schemes allow us to visualize that adjusting the tolerance reduces our number of linear regimes!"
    ]
   },
   {
@@ -1324,9 +1221,9 @@
      "data": {
       "text/plain": [
        "3-element Array{Float64,1}:\n",
-       "   0.9095095224291847   \n",
-       "   0.0003041384611420289\n",
-       " -14.57647978467127     "
+       "   0.9056904360864154   \n",
+       "  -1.7326613357827471e-6\n",
+       " -14.572355371847037    "
       ]
      },
      "execution_count": 38,
@@ -1348,10 +1245,10 @@
     {
      "data": {
       "text/html": [
-       "2.0624165555971268"
+       "2.062151154038888"
       ],
       "text/plain": [
-       "2.0624165555971268"
+       "2.062151154038888"
       ]
      },
      "execution_count": 39,
@@ -1868,15 +1765,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.7.0",
+   "display_name": "Julia 1.0.0",
    "language": "julia",
-   "name": "julia-0.7"
+   "name": "julia-1.0"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.7.0"
+   "version": "1.0.0"
   }
  },
  "nbformat": 4,
