--- a/Youtube_JuliaLang_tutorial/5. Delay Coordinates & Neighborhoods.ipynb
+++ b/Youtube_JuliaLang_tutorial/5. Delay Coordinates & Neighborhoods.ipynb
@@ -51,32 +51,32 @@
      "data": {
       "text/plain": [
        "4-dimensional Dataset{Float64} with 99988 points\n",
-       " 0.784694    0.959788    0.504152   0.834763 \n",
-       " 0.733754    0.0109946   0.29048    0.700033 \n",
-       " 0.229919    0.00352335  0.791526   0.775386 \n",
-       " 0.489078    0.793451    0.0195985  0.884876 \n",
-       " 0.959788    0.504152    0.834763   0.231721 \n",
-       " 0.0109946   0.29048     0.700033   0.750692 \n",
-       " 0.00352335  0.791526    0.775386   0.436964 \n",
-       " 0.793451    0.0195985   0.884876   0.0770119\n",
-       " 0.504152    0.834763    0.231721   0.316937 \n",
-       " 0.29048     0.700033    0.750692   0.544831 \n",
-       " 0.791526    0.775386    0.436964   0.543891 \n",
-       " 0.0195985   0.884876    0.0770119  0.855833 \n",
-       " 0.834763    0.231721    0.316937   0.389454 \n",
-       " ⋮                                           \n",
-       " 0.366783    0.309095    0.475025   0.0772182\n",
-       " 0.516626    0.387023    0.233636   0.645222 \n",
-       " 0.428679    0.625857    0.828744   0.903314 \n",
-       " 0.559331    0.682103    0.624607   0.147465 \n",
-       " 0.309095    0.475025    0.0772182  0.883627 \n",
-       " 0.387023    0.233636    0.645222   0.928569 \n",
-       " 0.625857    0.828744    0.903314   0.503634 \n",
-       " 0.682103    0.624607    0.147465   0.0975478\n",
-       " 0.475025    0.0772182   0.883627   0.558575 \n",
-       " 0.233636    0.645222    0.928569   0.846578 \n",
-       " 0.828744    0.903314    0.503634   0.759325 \n",
-       " 0.624607    0.147465    0.0975478  0.137706 \n"
+       " 0.495324   0.354389   0.761251   0.196267 \n",
+       " 0.174015   0.573645   0.453957   0.682715 \n",
+       " 0.758903   0.0108251  0.45025    0.206483 \n",
+       " 0.831319   0.215676   0.477462   0.470187 \n",
+       " 0.354389   0.761251   0.196267   0.650776 \n",
+       " 0.573645   0.453957   0.682715   0.172776 \n",
+       " 0.0108251  0.45025    0.206483   0.531138 \n",
+       " 0.215676   0.477462   0.470187   0.318724 \n",
+       " 0.761251   0.196267   0.650776   0.715732 \n",
+       " 0.453957   0.682715   0.172776   0.946724 \n",
+       " 0.45025    0.206483   0.531138   0.723807 \n",
+       " 0.477462   0.470187   0.318724   0.158102 \n",
+       " 0.196267   0.650776   0.715732   0.181423 \n",
+       " ⋮                                         \n",
+       " 0.436754   0.0750185  0.526258   0.509834 \n",
+       " 0.946428   0.203842   0.608407   0.632979 \n",
+       " 0.173277   0.0570724  0.19319    0.904505 \n",
+       " 0.0311462  0.0179074  0.242885   0.472028 \n",
+       " 0.0750185  0.526258   0.509834   0.0480799\n",
+       " 0.203842   0.608407   0.632979   0.316015 \n",
+       " 0.0570724  0.19319    0.904505   0.900934 \n",
+       " 0.0179074  0.242885   0.472028   0.154611 \n",
+       " 0.526258   0.509834   0.0480799  0.369847 \n",
+       " 0.608407   0.632979   0.316015   0.205872 \n",
+       " 0.19319    0.904505   0.900934   0.363427 \n",
+       " 0.242885   0.472028   0.154611   0.0335002\n"
       ]
      },
      "execution_count": 2,
@@ -116,17 +116,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: Deprecated syntax `implicit assignment to global variable `τ``.\n",
-      "│ Use `global τ` instead.\n",
-      "└ @ nothing none:0\n",
-      "┌ Warning: Loop variable `τ` around In[3]:12 overwrites a variable in an enclosing scope. In the future the variable will be local to the loop instead.\n",
-      "└ @ nothing In[3]:12\n"
-     ]
     }
    ],
    "source": [
@@ -457,9 +446,9 @@
      "data": {
       "text/plain": [
        "3-element Array{Int64,1}:\n",
-       " 292\n",
-       " 866\n",
-       " 779"
+       " 719\n",
+       " 175\n",
+       " 843"
       ]
      },
      "execution_count": 11,
@@ -489,9 +478,9 @@
      "output_type": "stream",
      "text": [
       "Fixed mass neighborhood of [1.0, 1.0, 1.0] is:\n",
-      "[0.990577, 0.949966, 0.791537]\n",
-      "[0.922975, 0.904421, 0.981492]\n",
-      "[0.851848, 0.986547, 0.854141]\n"
+      "[0.94428, 0.909157, 0.81873]\n",
+      "[0.920896, 0.840456, 0.888393]\n",
+      "[0.811471, 0.94311, 0.950079]\n"
      ]
     }
    ],
@@ -569,8 +558,7 @@
     {
      "data": {
       "text/plain": [
-       "1-element Array{Int64,1}:\n",
-       " 866"
+       "0-element Array{Int64,1}"
       ]
      },
      "execution_count": 15,
@@ -594,8 +582,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fixed size neighborhood of [1.0, 1.0, 1.0] is:\n",
-      "[0.922975, 0.904421, 0.981492]\n"
+      "Fixed size neighborhood of [1.0, 1.0, 1.0] is:\n"
      ]
     }
    ],
@@ -664,11 +651,12 @@
     {
      "data": {
       "text/plain": [
-       "4-element Array{Int64,1}:\n",
-       " 866\n",
-       " 319\n",
-       " 779\n",
-       " 685"
+       "5-element Array{Int64,1}:\n",
+       " 175\n",
+       " 171\n",
+       " 719\n",
+       " 483\n",
+       " 843"
       ]
      },
      "execution_count": 19,
@@ -700,9 +688,9 @@
      "data": {
       "text/plain": [
        "3-element StaticArrays.SArray{Tuple{3},Float64,1,3}:\n",
-       " 0.8445214874337741 \n",
-       " 0.8645310589726403 \n",
-       " 0.39097797027043035"
+       " 0.5375403563043124 \n",
+       " 0.10557324660546286\n",
+       " 0.5789517543089768 "
       ]
      },
      "execution_count": 20,
@@ -861,7 +849,7 @@
      "output_type": "stream",
      "text": [
       "Int64[]\n",
-      "[226]\n"
+      "[806]\n"
      ]
     }
    ],
@@ -894,7 +882,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.91812, 0.917547, 0.380704] is the nearest neighbor of [0.844521, 0.864531, 0.390978]\n"
+      "[0.518726, 0.124829, 0.603393] is the nearest neighbor of [0.53754, 0.105573, 0.578952]\n"
      ]
     }
    ],
@@ -1064,15 +1052,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.7.0",
+   "display_name": "Julia 1.0.0",
    "language": "julia",
-   "name": "julia-0.7"
+   "name": "julia-1.0"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.7.0"
+   "version": "1.0.0"
   }
  },
  "nbformat": 4,
